--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
 </header>
 
     <main class="main">
+      <section class="hero">
+  <div class="container">
+    <div class="image hero__image">
+      <span class="image__text hero__image-text">900×350px</span>
+      <div class="hero__image-block">
+        <h2 class="hero__image-title">Lorem ipsum dolor</h2>
+        <p class="hero__image-descr">
+          “ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In frin gilla massa ut nisi „
+        </p>
+      </div>
+      <div class="hero__image-dots">
+        <span class="hero__image-dot hero__image-dot--checked"></span>
+        <span class="hero__image-dot hero__image-dot--checked"></span>
+        <span class="hero__image-dot hero__image-dot--checked"></span>
+        <span class="hero__image-dot hero__image-dot--checked"></span>
+        <span class="hero__image-dot"></span>
+      </div>
+    </div>
+  </div>
+</section>
 
     </main>
 
