--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="image hero__image">
       <span class="image__text hero__image-text">900×350px</span>
       <div class="hero__image-block">
-        <h2 class="hero__image-title">Lorem ipsum dolor</h2>
+        <h2 class="main-title hero__image-title">Lorem ipsum dolor</h2>
         <p class="hero__image-descr">
           “ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In frin gilla massa ut nisi „
         </p>
@@ -85,10 +85,207 @@
   </div>
 </section>
 
+      <section class="cards">
+  <div class="container">
+    <h2 class="title title--pseudo-elements cards__title">Your title here</h2>
+    <div class="cards__wrapper">
+      <div class="card cards__card">
+        <div class="image cards__image">
+          <span class="image__text">64 <br> x <br> 64px</span>
+        </div>
+        <div class="card__text">
+          <h3 class="title card__title cards__card-title">Lorem ipsum dolor</h3>
+          <p class="card__descr">
+            Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iac.
+          </p>
+        </div>
+      </div>
+      <div class="card cards__card">
+        <div class="image cards__image">
+          <span class="image__text">64 <br> x <br> 64px</span>
+        </div>
+        <div class="card__text">
+          <h3 class="title card__title cards__card-title">Lorem ipsum dolor</h3>
+          <p class="card__descr">
+            Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iac.
+          </p>
+        </div>
+      </div>
+      <div class="card cards__card">
+        <div class="image cards__image">
+          <span class="image__text">64 <br> x <br> 64px</span>
+        </div>
+        <div class="card__text">
+          <h3 class="title card__title cards__card-title">Lorem ipsum dolor</h3>
+          <p class="card__descr">
+            Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iac.
+          </p>
+        </div>
+      </div>
+      <div class="card cards__card">
+        <div class="image cards__image">
+          <span class="image__text">64 <br> x <br> 64px</span>
+        </div>
+        <div class="card__text">
+          <h3 class="title card__title cards__card-title">Lorem ipsum dolor</h3>
+          <p class="card__descr">
+            Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iac.
+          </p>
+        </div>
+      </div>
+      <div class="card cards__card">
+        <div class="image cards__image">
+          <span class="image__text">64 <br> x <br> 64px</span>
+        </div>
+        <div class="card__text">
+          <h3 class="title card__title cards__card-title">Lorem ipsum dolor</h3>
+          <p class="card__descr">
+            Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iac.
+          </p>
+        </div>
+      </div>
+      <div class="card cards__card">
+        <div class="image cards__image">
+          <span class="image__text">64 <br> x <br> 64px</span>
+        </div>
+        <div class="card__text">
+          <h3 class="title card__title cards__card-title">Lorem ipsum dolor</h3>
+          <p class="card__descr">
+            Orciinterdum condimenterdum nullamcorper elit nam curabitur laoreet met praesenean et iac.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+      <section class="about">
+  <div class="about__cards">
+    <div class="container about__wrapper">
+      <div class="card about__card">
+        <h2 class="title title--pseudo-elements about__title">Your title here</h2>
+        <div class="about__card-content">
+          <div class="image about__card-image">
+            <span class="image__text">128 <br> x <br> 128px</span>
+          </div>
+          <div class="about__card-text">
+            <h3 class="title about__card-title about__card-title--margin-bottom">Title Goes Here</h3>
+            <p class="card__descr about__card-descr about__card-descr--margin-bottom">
+              Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt.
+            </p>
+            <a class="about__card-link" href="#">Read More »</a>
+          </div>
+        </div>
+      </div>
+      <div class="card about__card">
+        <h2 class="title title--pseudo-elements about__title">Your title here</h2>
+        <div class="about__card-content about__card-content--column">
+          <div class="about__card-wrapper">
+            <h3 class="title about__card-title">Tommy Tanker — CEO</h3>
+            <a class="about__card-link" href="#">View This Project »</a>
+          </div>
+          <p class="card__descr about__card-descr">
+            Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoreet tincidunt ut vel velit. Idenim semper pellente velis felit ac nullam pretium morbi lacus.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about__contacts">
+    <div class="container">
+      <div class="about__contacts-content">
+        <div class="about__contacts-text">
+          <h2 class="main-title about__contacts-title">Orciinterdum Corper Elit Nam?</h2>
+          <div class="about__contacts-descr">
+            Orciinterdum condimen urabitur laoreet met praesenean et iac!
+          </div>
+        </div>
+        <a class="about__contacts-link" href="#">Contact us today</a>
+      </div>
+    </div>
+  </div>
+</section>
+
     </main>
 
     <footer class="footer">
-  <div class="container"></div>
+  <div class="footer__content">
+    <div class="container container--bigger footer__content-wrapper">
+      <div class="footer__content-block footer__content-block--max-width">
+        <div class="footer__content-card">
+          <h2 class="title footer__content-title">Latest From The Blog</h2>
+          <div class="card footer__card">
+            <div class="footer__image-wrapper">
+              <div class="image footer__image">
+                <span class="image__text">95×95px</span>
+              </div>
+            </div>
+            <div class="footer__content-text">
+              <h3 class="card__title footer__card-title">Metuervestas mus lacinia</h3>
+              <p class="card__descr footer__card-descr">
+                Convallisijusto vestas mus pellentum aeneansa pibu lum in aliquam volut pat integest nulla. Acsed sed nunc at fring maurisusce at elis ut vitae laorem.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="footer__content-card">
+          <div class="card footer__card">
+            <div class="footer__image-wrapper">
+              <div class="image footer__image">
+                <span class="image__text">95×95px</span>
+              </div>
+            </div>
+            <div class="footer__content-text">
+              <h3 class="card__title footer__card-title">Metuervestas mus lacinia</h3>
+              <p class="card__descr footer__card-descr">
+                Convallisijusto vestas mus pellentum aeneansa pibu lum in aliquam volut pat integest nulla. Acsed sed nunc at fring maurisusce at elis ut vitae laorem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__content-block">
+        <h2 class="title footer__content-title">Company Details</h2>
+        <address class="footer__address">
+          <ul class="footer__address-list">
+            <li class="footer-contacts-text footer__address-item">Company Name</li>
+            <li class="footer-contacts-text footer__address-item">Street Name &amp; Number</li>
+            <li class="footer-contacts-text footer__address-item">Town</li>
+            <li class="footer-contacts-text footer__address-item">Postcode/Zip</li>
+          </ul>
+        </address>
+        <div class="footer__contacts">
+          <ul class="footer__contacts-list">
+            <li class="footer__contacts-item"><a class="footer-contacts-text footer__contacts-link" href="tel:+79999999999">Tel: xxxxx xxxxxxxxxx</a></li>
+            <li class="footer__contacts-item"><a class="footer-contacts-text footer__contacts-link" href="tel:+79999999999">Fax: xxxxx xxxxxxxxxx</a></li>
+            <li class="footer__contacts-item"><a class="footer-contacts-text footer__contacts-link" href="mailto:contact@mydomain.com">Email: contact@mydomain.com</a></li>
+          </ul>
+        </div>
+        <div class="footer__time">
+          <h3 class="footer-contacts-text footer__time-title">Office Hours</h3>
+          <ul class="footer__time-list">
+            <li class="footer-contacts-text footer__time-item">Monday — Friday: 08:00 — 17:30</li>
+            <li class="footer-contacts-text footer__time-item">Saturday: 08:00 — 13:00</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__content-block footer__content-block--offset">
+        <h2 class="title footer__content-title">Contact Us</h2>
+        <form class="form footer__content-form" action="#" >
+          <input class="form__input footer__content-input" type="text" placeholder="Name">
+          <input class="form__input footer__content-input" type="text" placeholder="Email">
+          <textarea class="form__input footer__content-input footer__content-input--textarea" placeholder="Message"></textarea>
+          <button class="btn-reset form__btn footer__content-btn">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="footer__rights">
+    <div class="container container--bigger footer__rights-wrapper">
+      <span class="footer-contacts-text footer__rights-text">Copyright © 2013 — All Rights Reserved — Domain Name</span>
+      <span class="footer-contacts-text footer__rights-text">Template by OS Templates</span>
+    </div>
+  </div>
 </footer>
 
   </div>
